Fixed z-index title on image slider

--- a/builder/src/resources/components/where-we-are/where-we-are.scss
+++ b/builder/src/resources/components/where-we-are/where-we-are.scss
@@ -10,12 +10,15 @@
     h1{
         text-align: center;
         color: white;
+        position: relative;
+        z-index: 1000;
     }
 
     .where-we-go-content{
         position: relative;
         width: 100%;
         height: 100%;
+        z-index: 100;
 
         .where-we-are-map-container{
             position: relative;
